# prompt-pocket

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html  robots.txt  sitemap.xml
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  store.rs  sync.rs
src/lib/: CategoryTabs.svelte  ContextMenu.svelte  Editor.svelte  PromptList.svelte  Settings.svelte  api.test.mjs  api.ts  i18n.test.mjs  i18n.ts  markdown.test.mjs  markdown.ts  reorder.test.mjs  reorder.ts  search.ts  types.ts
src/lib/renderers/: highlight.ts  index.ts  katex.ts  loadRemote.ts  mermaid.ts
