[package]
name = "prompt-pocket"
version = "1.0.2"
description = "轻量级提示词管理工具"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "prompt_pocket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML frontmatter 解析
serde_yaml = "0.9"
# 递归目录扫描
walkdir = "2"
# 文件名非法字符清理
sanitize-filename = "0.5"
# 系统默认数据目录
dirs = "5"
# 坚果云 WebDAV 同步
reqwest_dav = "0.2"
reqwest = "0.12"
# async runtime（Tauri 自带，这里显式声明用于 spawn 后台同步）
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
