[package]
name = "prompt-pocket"
version = "2.0.1"
description = "轻量级提示词管理工具"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "prompt_pocket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML frontmatter 解析
serde_yaml = "0.9"
# 递归目录扫描
walkdir = "2"
# 文件名非法字符清理
sanitize-filename = "0.5"
# 系统默认数据目录
dirs = "5"
# 坚果云 WebDAV 同步
reqwest_dav = "0.2"
reqwest = "0.12"
# 系统凭据库：WebDAV 应用密码不落入 config.json 明文
keyring = "4"
# async runtime（Tauri 自带，这里显式声明用于 spawn 后台同步）
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
# 模拟系统级键盘输入（注入 Ctrl+V 到原输入框）
enigo = "0.6"

# Windows API：检测前台窗口是否有文本光标（caret）以决定是否注入
# 仅 Windows 需要，放 target-specific 避免在 macOS/Linux 拉取无用的 windows crate
[target.'cfg(windows)'.dependencies]
# 版本与 enigo 传递依赖一致（0.61），避免双版本拉取
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
